--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,11 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Witaj na stronie logowania</h1>
+    <h1>Witaj na stronie głównej</h1>
 
-    {# <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/kubol/Desktop/Hermeciok_mp1/magazyn_projekt/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/kubol/Desktop/Hermeciok_mp1/magazyn_projekt/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul> #}
+    
 </div>
 {% endblock %}
