--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,6 @@
 <div class="example-wrapper">
     <h1>Witaj na stronie głównej</h1>
 
-    
+    <input type="button" onclick="location.href='http://magazyn-projekt/login'" value="Zaloguj się" />
 </div>
 {% endblock %}
