--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -58,6 +58,8 @@
     <input type="button" onclick="location.href='http://magazyn-projekt/add/user';" value="Dodaj nowego uzytkownika" />
     <input type="button" onclick="location.href='http://magazyn-projekt/add/item';" value="Dodaj nowy artykul" />
     <input type="button" onclick="location.href='http://magazyn-projekt/add/warehouse';" value="Dodaj nowy magazyn" />
-    <input type="button" onclick="location.href='http://magazyn-projekt/delete/user/cotroller';" value="usuń użytkownika" />
+    <input type="button" onclick="location.href='http://magazyn-projekt/delete/user';" value="Usuń użytkownika" />
+    <input type="button" onclick="location.href='http://magazyn-projekt/delete/warehouse';" value="Usuń magazyn" />
+    <input type="button" onclick="location.href='http://magazyn-projekt/delete/item';" value="Usuń artykuł" />
     <input type="button" onclick="location.href='http://magazyn-projekt/logout';" value="Wyloguj się" />
 {% endblock %}
