--- a/templates/account_user/index.html.twig
+++ b/templates/account_user/index.html.twig
@@ -44,4 +44,7 @@
         </div>
     {% endfor %}
     <input type="button" onclick="location.href='http://magazyn-projekt/logout';" value="Wyloguj się" />
+    <input type="button" onclick="location.href='http://magazyn-projekt/release/item';" value="Dodaj towar" />
+    <input type="button" onclick="location.href='http://magazyn-projekt/erase/item';" value="Wydaj towar" />
+
 {% endblock %}
