--- a/templates/erase_item/index.html.twig
+++ b/templates/erase_item/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DeleteUserCotrollerController!{% endblock %}
+{% block title %}Hello EraseItemController!{% endblock %}
 
 {% block body %}
 <style>
@@ -9,8 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Usuń użytkownika</h1>
+    <h1>Wydaj Towar</h1>
 
-    {{ form(addUserForm) }}
+    {{ form(EraseItemForm) }}
 </div>
 {% endblock %}
