Before item entity changes

--- a/templates/add_invoice/index.html.twig
+++ b/templates/add_invoice/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ReleaseItemController!{% endblock %}
+{% block title %}Hello AddInvoiceController!{% endblock %}
 
 {% block body %}
 <style>
@@ -9,8 +9,6 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Przyjmij artykuł</h1>
-
-    {{ form(ReleaseItemForm) }}
+{#    {{ form(AddInvoiceForm) }}#}
 </div>
 {% endblock %}
