--- a/templates/account_user/index.html.twig
+++ b/templates/account_user/index.html.twig
@@ -7,8 +7,8 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>O, witaj tutaj {{ app.user.username ?? 'Anonymous user' }}!</h1>
+<div class="container">
+    <h1 class="text-center">O, witaj tutaj {{ app.user.username ?? 'Anonymous user' }}!</h1>
 </div>
 
     {% for w in warehouses %}
@@ -43,8 +43,8 @@
             </table>
         </div>
     {% endfor %}
-    <input type="button" onclick="location.href='http://magazyn-projekt/logout';" value="Wyloguj się" />
-    <input type="button" onclick="location.href='http://magazyn-projekt/release/item';" value="Dodaj towar" />
-    <input type="button" onclick="location.href='http://magazyn-projekt/erase/item';" value="Wydaj towar" />
+{#    <input type="button" onclick="location.href='http://magazyn-projekt/logout';" value="Wyloguj się" />#}
+{#    <input type="button" onclick="location.href='http://magazyn-projekt/release/item';" value="Dodaj towar" />#}
+{#    <input type="button" onclick="location.href='http://magazyn-projekt/erase/item';" value="Wydaj towar" />#}
 
 {% endblock %}
