--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,14 +3,21 @@
 {% block title %}logowanie{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; border: 3px solid grey; text-align: center; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+        .example-wrapper {
+            margin: 1em auto;
+            max-width: 800px;
+            width: 95%;
+            font: 18px/1.5 sans-serif;
+            border: 3px solid grey;
+            text-align: center;
+        }
 
-<div class="example-wrapper">
-    <h1>Witaj na stronie głównej</h1>
+        .example-wrapper code {
+            background: #F5F5F5;
+            padding: 2px 6px;
+        }
+    </style>
 
-    <input type="button" onclick="location.href='http://magazyn-projekt/login'" value="Zaloguj się" />
-</div>
+
 {% endblock %}
