--- a/templates/users/list.html.twig
+++ b/templates/users/list.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row mt-5">
         <div class="col-md-12">
-            <h3>Dostępne artykuły:</h3>
+            <h3>Użytkownicy:</h3>
         </div>
     </div>
 
@@ -12,26 +12,23 @@
             <table class="table table-striped table-hover">
                 <thead>
                 <tr>
-                    <th>ID</th>
+                    <th>ID </th>
                     <th>Nazwa</th>
-                    <th>Jednostka</th>
-                    <th>VAT</th>
-                    <th class="col-md-2 text-end">
-                        <a href="{{ path('app_items_add') }}" class="btn btn-sm btn-primary">Dodaj</a>
+                    <th>Rola</th>
+                    <th class="col-md-1 text-end">
+                        <a href="{{ path('app_users_add') }}" class="btn btn-primary btn-sm">Dodaj</a>
                     </th>
                 </tr>
                 </thead>
 
                 <tbody>
-                {% for item in items %}
+                {% for user in users %}
                     <tr>
-                        <td> {{ item.getId() }}</td>
-                        <td> {{ item.getName() }}</td>
-                        <td> {{ item.getUnit() }}</td>
-                        <td> {{ item.getVat() }}</td>
+                        <td>{{ user.getId() }}</td>
+                        <td>{{ user.getUsername() }}</td>
+                        <td>{{ user.getRoles()[0] }}</td>
                         <td class="text-end">
                             <a href="#" class="btn btn-danger btn-sm disabled" data-bs-toggle="tooltip" data-bs-placement="top" title="Dostępne wkrótce">Usuń</a>
-                            <a href="{{ path('app_items_assign', { 'itemId': item.getId() }) }}" class="btn btn-primary btn-sm">Przypisz</a>
                         </td>
                     </tr>
                 {% endfor %}
