--- a/templates/warehouses/list.html.twig
+++ b/templates/warehouses/list.html.twig
@@ -1,11 +1,15 @@
 {% extends 'layout/layout.html.twig' %}
 
 {% block content %}
-    <div class="row mt-5">
-        <div class="col-md-12">
-            <h3>Dostępne magazyny:</h3>
+<div class="row mt-5">
+    <div class="col-md-12">
+        <h3>Magazyny:</h3>
+        <div class="col-md-12 text-end">
+            <a href="{{ path('app_warehouses_add') }}" class="btn btn-sm btn-primary">Dodaj</a>
         </div>
+
     </div>
+</div>
 
     {% for warehouse in warehouses %}
         <div class="row mt-5">
@@ -22,30 +26,25 @@
                             <div class="accordion-body">
                                 <table class="table table-striped table-hover">
                                     <thead>
-                                        <tr>
-                                            <th>ID</th>
-                                            <th>Nazwa</th>
-                                            <th>Ilość</th>
-                                            <th>Jednostka</th>
-                                            <th>VAT</th>
-                                            <th>Cena</th>
-                                            <th class="col-md-1 text-end">
-                                                <a href="#" class="btn btn-sm btn-dark">Dodaj</a>
-                                            </th>
-                                        </tr>
+                                    <tr>
+                                        <th>ID użytkownika</th>
+{#                                        <th class="col-md-1 text-end">#}
+{#                                            <a href="{{ path('app_warehouses_add') }}" class="btn btn-sm btn-primary">Dodaj</a>#}
+{#                                        </th>#}
+                                        <th>Nazwa użytkownika</th>
+                                        <th class="col-md-1 text-end">
+                                            <a href="{{ path('app_warehouses_assign', {'warehouseId': warehouse.getId()}) }}" class="btn btn-sm btn-primary">Przypisz</a>
+                                        </th>
+                                    </tr>
                                     </thead>
 
                                     <tbody>
-                                    {% for item in warehouse.items %}
+                                    {% for user in warehouse.users %}
                                         <tr>
-                                            <td> {{ item.getId() }}</td>
-                                            <td> {{ item.getName() }}</td>
-                                            <td> {{ item.getQuantity() }}</td>
-                                            <td> {{ item.getUnit() }}</td>
-                                            <td> {{ item.getVat() }}</td>
-                                            <td> {{ item.getPrice() }}</td>
+                                            <td> {{ user.getId() }}</td>
+                                            <td> {{ user.getUsername() }}</td>
                                             <td class="text-end">
-                                                <a href="{{ path('app_account', { 'itemId': item.getId() }) }}" class="btn btn-primary btn-sm">Wydaj</a>
+                                                <a href="{{ path('app_warehouses_delete_user', { 'userId': user.getId(), 'warehouseId': warehouse.getId() }) }}" class="btn btn-danger btn-sm">Usuń</a>
                                             </td>
                                         </tr>
                                     {% endfor %}
