Po usunięciu syfu

--- a/templates/warehouseItems/add.html.twig
+++ b/templates/warehouseItems/add.html.twig
@@ -3,13 +3,13 @@
 {% block content %}
     <div class="row mt-5">
         <div class="col-md-12 text-center">
-            <h3>Przypisz użytkowników</h3>
+            <h3>Dodaj artykuł</h3>
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col-md-12 d-flex flex-column justify-content-center align-items-center">
-            {{ form(AssignUserForm) }}
+            {{ form(AddWarehouseItemForm) }}
         </div>
     </div>
 {% endblock %}
