--- a/templates/warehouses/list.html.twig
+++ b/templates/warehouses/list.html.twig
@@ -33,7 +33,7 @@
 {#                                        </th>#}
                                         <th>Nazwa użytkownika</th>
                                         <th class="col-md-1 text-end">
-                                            <a href="{{ path('app_warehouses_assign', {'warehouseId': warehouse.getId()}) }}" class="btn btn-sm btn-primary">Przypisz</a>
+                                            <a href="{{ path('app_warehouses_assign_user', {'warehouseId': warehouse.getId()}) }}" class="btn btn-sm btn-primary">Przypisz</a>
                                         </th>
                                     </tr>
                                     </thead>
